--- a/EtsyScraper.ipynb
+++ b/EtsyScraper.ipynb
@@ -48,7 +48,7 @@
       },
       "outputs": [],
       "source": [
-        "shop_name = 'GemmoreRaw'\n",
+        "shop_name = '---x-Shop-Name-x---'\n",
         "\n",
         "#shop_directory = f'/content/drive/MyDrive/{shop_name}'\n",
         "shop_directory = f'/content/{shop_name}'\n",
